--- a/berenhtml.html
+++ b/berenhtml.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title>Brown Bears</title>
+		<link rel="stylesheet" href="berenstyle.css">
 	</head>
 
 	<body>
@@ -18,14 +19,14 @@
 					<li>
 						<a href="#introduction">Introduction</a>
 					</li>
-        </ul>
+       
 					<li>
 						<a href="#habitat">Habitat</a>
 					</li>
 					<li>
 						<a href="#media">Media</a>
 					</li>
-				
+				</ul>
 			</nav>
 			<div id="introduction">
 				<h2>About Brown Bears</h2>
@@ -58,7 +59,9 @@
 		
 			<h2>Media</h2>
 			<img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" />
-			<video src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" height="240" width="320" controls>Video not supported</video>
+			<nav class="video">
+			<video src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" height="240" width="100%" controls>Video not supported</video>
+		</nav>
 		</div>
 		</div>
 		</div>
