--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
 	<div class="page">
 		<nav class="main-nav">
 			<a href="./index.html">Brown Bear</a>
-			<a href="./aboutme.html">About Me</a>
+			<a href="./berenhtml.html">Index</a>
 		</nav>
 		<div class="page-content">
 			<h1>The Brown Bear</h1>
